--- a/ShopBK/src/main/resources/application.properties
+++ b/ShopBK/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=ShopBK
+spring.datasource.url=jdbc:postgresql://localhost:5432/ProgettoShop
+
+spring.datasource.username=postgres
+spring.datasource.password=root
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+upload.path=uploads/products
+# Configurazione per servire i file statici
+spring.web.resources.static-locations=classpath:/static/, file:uploads/products/
+spring.resources.static-locations=classpath:/static/, file:uploads/products/
+
+
+
